# lazy-loading-demo

./: LICENSE  README.md  demo.py
.github/workflows/: test.yml
core/: pyproject.toml
core/src/my_framework/: __init__.py  base.py
extension/: pyproject.toml
extension/src/my_framework_ext/: __init__.py  tools.py
meta/: pyproject.toml
meta/src/my_framework_complete/: __init__.py
